force-app/main/default/objects/Clarity_Form_Question__c/Clarity_Form_Question__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Question</label>
    <nameField>
        <label>Clarity Form Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>