force-app/main/default/objects/Clarity_Form_Question__c/fields/Clarity_Form__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form__c</fullName>
    <label>Clarity Form</label>
    <referenceTo>Clarity_Form__c</referenceTo>
    <relationshipLabel>Clarity Form Questions</relationshipLabel>
    <relationshipName>Clarity_Form_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>