force-app/main/default/objects/Clarity_Form_Question__c/fields/Connected_Object__c.field-meta.xml
<CustomField>
    <fullName>Connected_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Object</label>
    <referenceTo>forms__Form_Question__c</referenceTo>
    <relationshipLabel>Connected Objects</relationshipLabel>
    <relationshipName>forms__Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>