force-app/main/default/objects/Clarity_Form_Question__c/fields/Logic__c.field-meta.xml
<CustomField>
    <fullName>Logic__c</fullName>
    <defaultValue>&quot;ALL&quot;</defaultValue>
    <label>Logic</label>
    <length>18</length>
    <type>Text</type>
</CustomField>