force-app/main/default/objects/Clarity_Form_Question__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <label>Lookup</label>
    <length>40</length>
    <type>Text</type>
</CustomField>