force-app/main/default/objects/Clarity_Form_Question__c/fields/Min_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Range__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>