force-app/main/default/objects/Clarity_Form_Question__c/fields/Prefill_Type__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Type__c</fullName>
    <label>Prefill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>URL Query Parameter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>