force-app/main/default/objects/Clarity_Form_Question__c/fields/Record_Group__c.field-meta.xml
<CustomField>
    <fullName>Record_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Group</label>
    <referenceTo>forms__Form_Question__c</referenceTo>
    <relationshipLabel>Record Groups</relationshipLabel>
    <relationshipName>forms__Form_Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>